--- a/backend/Dockerfile.acceptance
+++ b/backend/Dockerfile.acceptance
@@ -1,9 +1,9 @@
-ARG PLONE_VERSION=6.0.0b1
+ARG PLONE_VERSION=6.0.1
 FROM plone/plone-backend:${PLONE_VERSION}
 
 LABEL maintainer="Plone Foundation <conf@plone.org>" \
       org.label-schema.name="ploneconf-acceptance" \
-      org.label-schema.description="Plone Conference 2022 acceptance tests." \
+      org.label-schema.description="Plone Conference 2023 acceptance tests." \
       org.label-schema.vendor="Plone Foundation"
 
 ENV ZSERVER_HOST=0.0.0.0
