--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ploneconf-frontend",
-  "description": "Plone Conference 2022 website",
+  "description": "Plone Conference 2023 website",
   "license": "MIT",
   "version": "1.0.0",
   "scripts": {
@@ -42,12 +42,11 @@
     "@eeacms/volto-accordion-block",
     "@plone-collective/volto-tito-block",
     "volto-form-block",
-    "@plone-collective/volto-authomatic",
     "@kitconcept/volto-separator-block",
     "@kitconcept/volto-blocks-grid",
     "@kitconcept/volto-slider-block",
     "@eeacms/volto-matomo",
-    "volto-conf2022-theme"
+    "volto-conf2023-theme"
   ],
   "jest": {
     "modulePathIgnorePatterns": [
@@ -149,24 +148,25 @@
     "node": "^14 || ^16"
   },
   "dependencies": {
-    "@eeacms/volto-accordion-block": "*",
-    "@eeacms/volto-matomo": "2.0.8",
-    "@kitconcept/volto-blocks-grid": "5.1.1",
-    "@kitconcept/volto-separator-block": "2.0.0",
-    "@kitconcept/volto-slider-block": "2.0.0",
+    "@eeacms/volto-accordion-block": "7.0.0",
+    "@eeacms/volto-matomo": "3.0.1",
+    "@kitconcept/volto-blocks-grid": "6.1.0",
+    "@kitconcept/volto-separator-block": "3.0.1",
+    "@kitconcept/volto-slider-block": "4.1.0",
     "@plone-collective/volto-authomatic": "*",
     "@plone-collective/volto-tito-block": "*",
-    "@plone/volto": "16.0.0-alpha.41",
+    "@plone/volto": "16.10.0",
     "react-compound-timer": "1.2.0",
-    "volto-form-block": "*"
+    "volto-form-block": "3.0.1",
+    "react-dates": "21.8.0"
   },
   "devDependencies": {
-    "@plone/scripts": "^2.1.1",
-    "@storybook/addon-actions": "^6.3.0",
+    "@plone/scripts": "2.3.0",
+    "@storybook/addon-actions": "6.3.0",
     "@storybook/addon-controls": "6.3.0",
-    "@storybook/addon-essentials": "^6.3.0",
-    "@storybook/addon-links": "^6.3.0",
-    "@storybook/react": "^6.3.0",
+    "@storybook/addon-essentials": "6.3.0",
+    "@storybook/addon-links": "6.3.0",
+    "@storybook/react": "6.3.0",
     "eslint-plugin-prettier": "3.1.3",
     "jest-junit": "8.0.0",
     "mrs-developer": "*",
@@ -178,6 +178,6 @@
     "stylelint-prettier": "1.1.2"
   },
   "resolutions": {
-    "**/@plone/scripts": "^2.1.1"
+    "**/@plone/scripts": "2.2.1"
   }
 }
